# eval-hub

./: .pre-commit-config.yaml  API.md  Containerfile  README.md  pyproject.toml
containers/garak/: Dockerfile  README.md  avid_report.py  build.sh  garak_component.py  requirements.txt  result_parser.py
docs/: openapi.json  openapi.yaml
examples/: api_examples.ipynb
src/eval_hub/adapters/: __init__.py
src/eval_hub/adapters/frameworks/: __init__.py  garak.py
src/eval_hub/api/: routes.py
src/eval_hub/data/: providers.yaml
src/eval_hub/executors/: __init__.py  factory.py  kfp.py  lmeval.py  nemo.py  tracked.py
src/eval_hub/models/: evaluation.py  nemo.py  provider.py
src/eval_hub/services/: executor.py  parser.py  provider_service.py
tests/: conftest.py
tests/integration/: test_api.py  test_garak.py  test_live_server.py  test_provider_integration.py
tests/unit/: test_kfp_executor.py  test_lmeval_executor.py  test_models.py  test_parser.py  test_provider_api.py  test_provider_service.py  test_response_builder.py  test_routes_error_handling.py  test_single_benchmark_api.py  test_tracked_executor.py
tests/unit/adapters/frameworks/: test_garak.py
tests/unit/utils/: test_datetime_utils.py
