[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-hub"
version = "0.1.1"
description = "API REST server for evaluation backend orchestration on Kubernetes"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rui Vieira"},
]
keywords = ["evaluation", "ml", "orchestration", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # Core API framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",

    # Async and concurrency
    "aiohttp>=3.9.1",
    "httpx>=0.25.2",

    # MLFlow integration (client-only, no server components)
    "mlflow-skinny>=2.8.1",

    # Data models and validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Configuration files
    "PyYAML>=6.0.1",

    # Monitoring and logging
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",

    # Production server
    "gunicorn>=21.2.0",

    # Kubernetes client
    "kubernetes>=28.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "kfp>=2.0.0",
]

test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "requests>=2.31.0",
]

kfp = [
    "kfp>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/eval-hub/eval-hub"
Repository = "https://github.com/eval-hub/eval-hub"
Issues = "https://github.com/eval-hub/eval-hub/issues"

[project.scripts]
eval-hub = "eval_hub.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_hub"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "mlflow.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
